--- a/Index.html
+++ b/Index.html
@@ -7,5 +7,6 @@
     correction of 1st website
     <h1>Failures are the pillers of success</h1>
     <p>peace finally</p>
+    <button>new branch button</button>
 </body>
 </html>
