--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     correction of 1st website
+    <h1>AJFAR SAJIN</h1>
     <h1>Failures are the pillers of success</h1>
     <p>peace finally</p>
     <button>click</button>
