--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     correction of 1st website
     <h1>AJFAR SAJIN</h1>
     <h1>Failures are the pillers of success</h1>
-    <p>peace finally</p>
+    <p>peace and war</p>
     <button>click</button>
 </body>
 </html>
