--- a/Index.html
+++ b/Index.html
@@ -9,5 +9,6 @@
     <h1>Failures are the pillers of success</h1>
     <p>peace and war</p>
     <button>click</button>
+    <h3>don't click</h3>
 </body>
 </html>
