--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,9 @@
     <title>Document</title>
 </head>
 <body>
-    correction of 1st website
+    proposal
     <h1>I Love you Tasnia Azad</h1>
-    <h1>Stay with me foreever</h1>
+    <h1>Stay with me forever</h1>
     <p>IN happiness and sorrow</p>
     <button>Agree</button>
     <h2>Please agree</h2>
