--- a/Index.html
+++ b/Index.html
@@ -2,13 +2,133 @@
 <html lang="en">
 <head>
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#"><h1 class="yai">YOU AND I</h1></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Homes <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#shoes">Shoes</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#backpacks">Backpacks</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#contact">Contact us</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+    </div>
+    <div class="container">
+        <div id="carouselExampleInterval" class="carousel slide banner-background" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-interval="10000">
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <h1>You are the most important person to me.</h1>
+                        <p>I know I can't always give you enough time. When I'm not with you every moment I feel you.</p>
+                        <h1 class="price">Will you marrie me?</h1>
+                        <button class="buy-now">Yes?</button>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="images/t1 (1).jpeg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item" data-interval="2000">
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <h1>You are the most beautiful person in earth</h1>
+                        <p>I,ve just lost my words watching at the beautiful picture of yours. I want to loss my words for the rest of my life in this way.</p>
+                        <h1 class="price">Will you marrie me?</h1>
+                        <button class="buy-now">Yes?</button>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="images/t1 (1).jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <h1>I can see you everywhere.</h1>
+                        <p>I can feel your presence in every pleasureable moments. Ans also in my saddest days.</p>
+                        <h1 class="price">Will you marrie me?</h1>
+                        <button class="buy-now">Yes?</button>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="images/t1 (2).jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+    </div>
+    <div class="container" id="backpack">
+        <h3>Backpack</h3>
+        <div class="card-deck">
+            <div class="card">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Ison Backpack</h5>
+                <p class="card-text">This backpack is your next bestfriend in every work with its stunning red outlook.</p>
+                <h5>$125</h5>
+              </div>
+              <div class="card-footer">
+                <button class="buy-now ">Buy Now >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Biaowang Bagpack</h5>
+                <p class="card-text">This backpack will take care of your style and protection of your instruments.</p>
+                <h5>$325</h5>
+              </div>
+              <div class="card-footer">
+                <button class="buy-now ">Buy Now >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Dyxizu WS54 Bagpack</h5>
+                <p class="card-text">This dark back is ready to suit with your every outlook and make you more confident.</p>
+              </div>
+              <h5>$175</h5>
+              <div class="card-footer">
+                <button class="buy-now ">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+    </div>
     proposal
     <h1>I Love you Tasnia Azad</h1>
     <h1>Stay with me forever</h1>
     <p>IN happiness and sorrow</p>
     <button>Agree</button>
     <h2>Please agree</h2>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
