--- a/Index.html
+++ b/Index.html
@@ -15,16 +15,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Homes <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="#">Propose <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#shoes">Shoes</a>
+                  <a class="nav-link" href="#shoes">Memories</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#backpacks">Backpacks</a>
+                  <a class="nav-link" href="#backpacks">Special Moments</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#contact">Contact us</a>
+                  <a class="nav-link" href="#contact">Us</a>
                 </li>
               </ul>
             </div>
@@ -81,6 +81,44 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
+          </div>
+    </div>
+    <div class="container" id="backpack">
+        <h3>Memories</h3>
+        <div class="card-deck">
+            <div class="card">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Ison Backpack</h5>
+                <p class="card-text">This backpack is your next bestfriend in every work with its stunning red outlook.</p>
+                <h5>$125</h5>
+              </div>
+              <div class="card-footer">
+                <button class="buy-now ">Buy Now >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Biaowang Bagpack</h5>
+                <p class="card-text">This backpack will take care of your style and protection of your instruments.</p>
+                <h5>$325</h5>
+              </div>
+              <div class="card-footer">
+                <button class="buy-now ">Buy Now >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Dyxizu WS54 Bagpack</h5>
+                <p class="card-text">This dark back is ready to suit with your every outlook and make you more confident.</p>
+              </div>
+              <h5>$175</h5>
+              <div class="card-footer">
+                <button class="buy-now ">Buy Now >></button>
+              </div>
+            </div>
           </div>
     </div>
     <div class="container" id="backpack">
