--- a/Index.html
+++ b/Index.html
@@ -87,7 +87,7 @@
         <h3>Memories</h3>
         <div class="card-deck">
             <div class="card">
-              <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+              <img src="images/memories (1).jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Ison Backpack</h5>
                 <p class="card-text">This backpack is your next bestfriend in every work with its stunning red outlook.</p>
@@ -98,7 +98,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+              <img src="images/memories (1).jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Biaowang Bagpack</h5>
                 <p class="card-text">This backpack will take care of your style and protection of your instruments.</p>
@@ -109,7 +109,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+              <img src="images/memories (2).jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Dyxizu WS54 Bagpack</h5>
                 <p class="card-text">This dark back is ready to suit with your every outlook and make you more confident.</p>
