--- a/Index.html
+++ b/Index.html
@@ -89,34 +89,34 @@
             <div class="card">
               <img src="images/memories (1).jpeg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Ison Backpack</h5>
-                <p class="card-text">This backpack is your next bestfriend in every work with its stunning red outlook.</p>
-                <h5>$125</h5>
+                <h5 class="card-title">14 April,2017</h5>
+                <p class="card-text">After waiting for almost 1 hours you came wearing that red dress. Your 1st glance blew my mind that day.</p>
+                <h5>Missing those days</h5>
               </div>
               <div class="card-footer">
-                <button class="buy-now ">Buy Now >></button>
+                <button class="buy-now ">Remember? >></button>
               </div>
             </div>
             <div class="card">
               <img src="images/memories (1).jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Biaowang Bagpack</h5>
-                <p class="card-text">This backpack will take care of your style and protection of your instruments.</p>
-                <h5>$325</h5>
+                <h5 class="card-title">Regular Dating</h5>
+                <p class="card-text">Those days were really peaceful. We used to date wvery friday after my guiter classes.</p>
+                <h5>Missing those day</h5>
               </div>
               <div class="card-footer">
-                <button class="buy-now ">Buy Now >></button>
+                <button class="buy-now ">Remember? >></button>
               </div>
             </div>
             <div class="card">
               <img src="images/memories (2).jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Dyxizu WS54 Bagpack</h5>
-                <p class="card-text">This dark back is ready to suit with your every outlook and make you more confident.</p>
-              </div>
-              <h5>$175</h5>
+                <h5 class="card-title">Beginning of the spring</h5>
+                <p class="card-text">That day was windy. Winds from north was about to end and soutn was just about to begun. You and I alone on the tallest building if Barishal city.</p>
+              <h5>Missing those days</h5>
+            </div>
               <div class="card-footer">
-                <button class="buy-now ">Buy Now >></button>
+                <button class="buy-now ">Remember? >></button>
               </div>
             </div>
           </div>
